test/invalid/ObjectPlusObject/Number.plume

/**
 *
 * @author 37029, Juliana Franco
 *
 */
class Number extends Object is

  method getDoubleString : (left:Integer, right:Integer) -> String is
  	left + "." + right